# softdesk-support

./: .env  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  structure.txt
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_age.py
comments/: models.py  serializers.py  views.py
comments/migrations/: 0001_initial.py
core/: pagination.py  permissions.py
issues/: models.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py  0002_alter_issue_options.py  0003_alter_issue_status.py
postman/: collection Postman.json
projects/: models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_contributor_role_alter_project_type.py
softdesk_support/: asgi.py  settings.py  urls.py  views.py  wsgi.py
softdesk_support/templates/softdesk_support/: home.html
tests/: conftest.py  test_authentication.py  test_comments.py  test_issue.py  test_permissions.py  test_projects.py
